Notes up to 22:00

--- a/Lecture 10 notes.ipynb
+++ b/Lecture 10 notes.ipynb
@@ -66,7 +66,29 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "We want to understand these subspaces: what systematic way will produce their bases? What is their dimension? \n",
+    "\n",
+    "#### Dimension\n",
+    "Dimension of a subspace is its rank\n",
+    "The dimension of a column space (C(A)) = r of A\n",
+    "The dimension of a row space (C(A^T)) = r of A, Also!\n",
+    "\n",
+    "Row space and column space of a matrix A have the same dimension!\n",
+    "\n",
+    "N(A) = n-r  \n",
+    "N(A^T) = m-r\n",
+    "\n",
+    "The dimension of the null space and the column space should equal the number of columns  \n",
+    "\n",
+    "#### Basis\n",
+    "C(A) - Pivot columms\n",
+    "N(A) - special solutions \n",
+    "C(A^T) - Pivot columns of A^T\n",
+    "N(A^T) - special solutions \n",
+    "\n",
+    "\n"
+   ]
   },
   {
    "cell_type": "code",
