added lecture notes

--- a/Lecture 10 notes.ipynb
+++ b/Lecture 10 notes.ipynb
@@ -1,6 +1,16 @@
 {
  "cells": [
   {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import numpy as np\n",
+    "from sympy import *"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -79,15 +89,63 @@
     "N(A) = n-r  \n",
     "N(A^T) = m-r\n",
     "\n",
-    "The dimension of the null space and the column space should equal the number of columns  \n",
+    "The dimension of the null space plus the dimension of the column space should equal the number of columns  \n",
     "\n",
     "#### Basis\n",
     "C(A) - Pivot columms\n",
     "N(A) - special solutions \n",
     "C(A^T) - Pivot columns of A^T\n",
-    "N(A^T) - special solutions \n",
+    "N(A^T) - special solutions "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The final matrix R has the identity matrix I, free variable F, and a row of zeros: \n",
+      "[[1 0 1 1]\n",
+      " [0 1 1 0]\n",
+      " [0 0 0 0]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "A =np.array([[1, 2, 3, 1],[1, 1, 2, 1],[1, 2, 3, 1]])\n",
     "\n",
-    "\n"
+    "#elimination to get the pivots\n",
+    "A=np.array([[1, 2, 3, 1],[0, 1, 1, 0],[0, 0, 0, 0]])\n",
+    "\n",
+    "#clean up the matrix to get R\n",
+    "R=np.array([[1, 0, 1, 1],[0, 1, 1, 0],[0, 0, 0, 0]])\n",
+    "print(\"The final matrix R has the identity matrix I,\\\n",
+    "free variable F, and a row of zeros: \") \n",
+    "print(R)\n",
+    "\n",
+    "#R has the identity matrix "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "But now C(R) =/= C(A)! We did row operations, which should have preserved the rows, and thus C(A^T)=C(R^T) should still apply. But the column space has been altered given that we did row operations. \n",
+    "\n",
+    "##### Basis for row space of A or R is teh first r rows of R\n",
+    "Sometimes it's true for A as well, but not necessarily. \n",
+    "\n",
+    "#### Why is C(A^T)=C(R^T)?\n",
+    "We arrived to R by taking different combinations of the rows of A. So R is certainly in the row sapce of A. Thus the dimension is r, and the natural basis for A is the r rows of R. Reversing the steps of row reductions, we return to the rows of A --> the two row spaces of R and A are the same, and the basis are the same. The natural basis for A is the r rows of R.\n",
+    "\n",
+    "#### 4th space: N(A^T)\n",
+    "A^T y = 0  , thus y is in N(A^T).\n",
+    "\n",
+    "\n",
+    "[ MATRIX ] dot [ COLUMN ] = [ ZERO ] "
    ]
   },
   {
