Notes up to 20:00

--- a/Lecture 11.ipynb
+++ b/Lecture 11.ipynb
@@ -15,7 +15,196 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Lecture 11 : Bases for new vectore sapces, rank 1 matrices, small world graphs"
+    "# Lecture 11 : Bases for new vector sapces, rank 1 matrices, small world graphs"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### A vector space of matrices \n",
+    "The space M = all 3x3 matrices\n",
+    "\n",
+    "#### Subspaces \n",
+    "- Symmetric 3x3 (adding 3x3 symmetric matrices will result in more upper triangular matrices)\n",
+    "- Upper triangular 3x3 (adding 3x3 upper triangular matrices will result in more upper triangular matrices)\n",
+    "\n",
+    "### Basis for M=all 3x3's\n",
+    "To define the space of all 3x3s, we have to define 9 dimesions: \n",
+    "dmiM=9\n",
+    "\n",
+    "[1, 0, 0]\n",
+    "[0, 0, 0]\n",
+    "[0, 0, 0]\n",
+    "\n",
+    "[0, 1, 0]\n",
+    "[0, 0, 0]\n",
+    "[0, 0, 0]\n",
+    "\n",
+    "[0, 0, 1]\n",
+    "[0, 0, 0]\n",
+    "[0, 0, 0]\n",
+    "\n",
+    "...\n",
+    "\n",
+    "[1, 0, 0]\n",
+    "[0, 0, 0]\n",
+    "[0, 0, 1]\n",
+    "\n",
+    "#### How about the basis for symmetric 3x3s, S?\n",
+    "only 6 matrices! \n",
+    "dimS=6\n",
+    "\n",
+    "[1, 0, 0]\n",
+    "[0, 0, 0]\n",
+    "[0, 0, 0]\n",
+    "\n",
+    "[0, 0, 0]\n",
+    "[0, 1, 0]\n",
+    "[0, 0, 0]\n",
+    "\n",
+    "[0, 0, 0]\n",
+    "[0, 0, 0]\n",
+    "[0, 0, 1]\n",
+    "\n",
+    "[0, 1, 0]\n",
+    "[1, 0, 0]\n",
+    "[0, 0, 0]\n",
+    "\n",
+    "[0, 0, 1]\n",
+    "[0, 0, 0]\n",
+    "[1, 0, 0]\n",
+    "\n",
+    "[0, 0, 0]\n",
+    "[0, 0, 1]\n",
+    "[0, 1, 0]\n",
+    "\n",
+    "#### And upper triangular matrices, U?\n",
+    "also 6 matrices! \n",
+    "dimU=6\n",
+    "\n",
+    "[1, 0, 0]\n",
+    "[0, 0, 0]\n",
+    "[0, 0, 0]\n",
+    "\n",
+    "[0, 0, 0]\n",
+    "[0, 1, 0]\n",
+    "[0, 0, 0]\n",
+    "\n",
+    "[0, 0, 0]\n",
+    "[0, 0, 0]\n",
+    "[0, 0, 1]\n",
+    "\n",
+    "[0, 1, 0]\n",
+    "[0, 0, 0]\n",
+    "[0, 0, 0]\n",
+    "\n",
+    "[0, 0, 1]\n",
+    "[0, 0, 0]\n",
+    "[0, 0, 0]\n",
+    "\n",
+    "[0, 0, 0]\n",
+    "[0, 0, 1]\n",
+    "[0, 0, 0]\n",
+    "\n",
+    "#### And, now how about SnU = symmetric and upper triangular? \n",
+    "SnU - S intersect U /\n",
+    "SnU=diagonal 3x3s /\n",
+    "dim(SnU) = 3\n",
+    "\n",
+    "[1, 0, 0]\n",
+    "[0, 0, 0]\n",
+    "[0, 0, 0]\n",
+    "\n",
+    "[0, 0, 0]\n",
+    "[0, 1, 0]\n",
+    "[0, 0, 0]\n",
+    "\n",
+    "[0, 0, 0]\n",
+    "[0, 0, 0]\n",
+    "[0, 0, 1]\n",
+    "\n",
+    "\n",
+    "Putting the subspaces together is not interesting. Why?\n",
+    "#### SuU? Not a subspace! \n",
+    "\n",
+    "#### S+U\n",
+    "this works better. Combinatinos of things in S and U: any element in S plus any element in U. This returns the full space of M, the result of summing up all symmetric and upper triangular matrices is the entire space of all 3x3's. \n",
+    "dim(S+U)=9\n",
+    "\n",
+    "[1, 0, 0]\n",
+    "[0, 0, 0]\n",
+    "[0, 0, 0]\n",
+    "\n",
+    "[0, 0, 0]\n",
+    "[0, 1, 0]\n",
+    "[0, 0, 0]\n",
+    "\n",
+    "[0, 0, 0]\n",
+    "[0, 0, 0]\n",
+    "[0, 0, 1]\n",
+    "\n",
+    "[0, 1, 0]\n",
+    "[1, 0, 0]\n",
+    "[0, 0, 0]\n",
+    "\n",
+    "[0, 0, 1]\n",
+    "[0, 0, 0]\n",
+    "[1, 0, 0]\n",
+    "\n",
+    "[0, 0, 0]\n",
+    "[0, 0, 1]\n",
+    "[0, 1, 0]\n",
+    "\n",
+    "[0, 0, 0]\n",
+    "[0, 0, 0]\n",
+    "[0, 0, 1]\n",
+    "\n",
+    "[0, 1, 0]\n",
+    "[0, 0, 0]\n",
+    "[0, 0, 0]\n",
+    "\n",
+    "[0, 0, 1]\n",
+    "[0, 0, 0]\n",
+    "[0, 0, 0]\n",
+    "\n",
+    "[0, 0, 0]\n",
+    "[0, 0, 1]\n",
+    "[0, 0, 0]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### This gives us nice relatinoships: \n",
+    "dim(S)+dim(U) = 6+6 = 12\n",
+    "dim(SnU) + dim(S+U) = 3+9 = 12"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Lets take one more example of a vector space that does not have vectors in it:\n",
+    "\n",
+    "#### Differential equations!\n",
+    "d^2/dx^2 + y = 0\n",
+    "\n",
+    "Complete solution: y=c1 * cosx + C2 * sinx, \n",
+    "\n",
+    "We're looking at the nullspace of this equation here. \n",
+    "\n",
+    "#### The basis\n",
+    "for this equation is cosx, sinx\n",
+    "\n",
+    "#### The dimension\n",
+    "for this solution sapce = 2\n",
+    "The dimension of this diff. eq. will always be 2 since we have a second order equation. \n",
+    "\n",
+    "e^(ix), e^(-ix) is another basis. There are lots of bases.\n",
+    "\n",
+    "What linear differential equations is really about is finding bases for the solution space. "
    ]
   },
   {
