updating all files

--- a/Lecture 11.ipynb
+++ b/Lecture 11.ipynb
@@ -204,7 +204,9 @@
     "\n",
     "e^(ix), e^(-ix) is another basis. There are lots of bases.\n",
     "\n",
-    "What linear differential equations is really about is finding bases for the solution space. "
+    "What linear differential equations is really about is finding bases for the solution space. \n",
+    "\n",
+    "The basis for this diff eq system does not look like vectors, but we can call them vectors since we can take linear combinations of them and multiply them by scalars, and the rsults are still in the space! "
    ]
   },
   {
